[package]
name = "link-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
log = "0.4.27"
num_cpus = "1.17.0"
reqwest = "0.12.23"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
simple_logger = "5.0.0"
structured-logger = "1.0.4"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.6"
uuid = { version = "1.18.0", features = ["v4"] }
