[package]
name = "link-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
log = "0.4.29"
num_cpus = "1.17.0"
reqwest = "0.13.2"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simple_logger = "5.1.0"
structured-logger = "1.0.5"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4"] }
